--- a/exercises/assets/css/style-2.css
+++ b/exercises/assets/css/style-2.css
@@ -11,12 +11,26 @@ input, button, textarea, select { font: inherit }
 
 /* ================= ENDS ================ */
 
+body { background-color: purple; }
+
+/* Desktops */
+@media (min-width: 768px) {
+    body { padding: 4% 20% }
+ }
+ 
+ /* Mobiles */
+ @media (max-width: 767px) {
+    body { padding: 8% 5% }
+ }
+ 
+ 
 h1 {
     font-size: 84px;
     margin-bottom: 64px;
     text-align: center;
     font-weight: normal;
     letter-spacing: 4px;
+    color: white;
 }
 
 h2 {
@@ -24,11 +38,12 @@ h2 {
     margin-bottom: 4px;
     margin-top: 54px;
     text-transform: uppercase;
+    color: white;
 }
 
 p {
     font-size: 20px;
     font-family: sans-serif;
     line-height: 1.6;
-    margin-bottom: 20px;
-}
+    margin-bottom: 20px; }
+    a { color: white; }
