--- a/exercises/assets/css/style-3.css
+++ b/exercises/assets/css/style-3.css
@@ -9,17 +9,22 @@ body { line-height: 1.5; min-height: 100vh }
 img { width: 100%; height: auto; display: block }
 input, button, textarea, select { font: inherit }
 
+body { background-color: lightblue; }
+
 h2 {
     font-size: 56px;
     margin-bottom: 4px;
+    color: blue;
 }
 
 h3 {
     font-size: 32px;
     margin-bottom: 4px;
+    color: blue;
 }
 
 p {
     font-size: 24px;
     margin-bottom: 16px
 }
+a { color: blue; }
