--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11,6 +11,10 @@ input, button, textarea, select { font: inherit }
 
 /* ================= ENDS ================ */
 
+body { background-color: lightgreen; }
+
+
+
 /* Desktops */
 @media (min-width: 768px) {
     body { padding: 4% 20% }
@@ -54,4 +58,4 @@ p {
     font-size: 20px;
     margin-bottom: 16px;
 }
-
+a { color: darkgreen; }
