--- a/exercises/assets/css/style-2.css
+++ b/exercises/assets/css/style-2.css
@@ -11,7 +11,7 @@ input, button, textarea, select { font: inherit }
 
 /* ================= ENDS ================ */
 
-body { background-color: purple; }
+body { background-color: #39B5E0; }
 
 /* Desktops */
 @media (min-width: 768px) {
