--- a/exercises/assets/css/style-3.css
+++ b/exercises/assets/css/style-3.css
@@ -9,12 +9,12 @@ body { line-height: 1.5; min-height: 100vh }
 img { width: 100%; height: auto; display: block }
 input, button, textarea, select { font: inherit }
 
-body { background-color: lightblue; }
+body { background-color: #CCD6A6; }
 
 h2 {
     font-size: 56px;
     margin-bottom: 4px;
-    color: blue;
+    color:blue
 }
 
 h3 {
