--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,7 +1,7 @@
 /*  ============= WEB BROWSER RESETS ============ */
 * { margin: 0; padding: 0; border: none }
 *, *::before, *::after { box-sizing: border-box }
-html { height: 100%; font-size: 100%; font: inherit; vertical-align: baseline;
+html { height: 100%; font-size: 60%; font: inherit; vertical-align: baseline;
 scroll-behavior: smooth; scroll-padding-top: 20px }
 body { line-height: 1.5; min-height: 100vh }
 @media (max-width: 767px ) { body { text-rendering: optimizeSpeed } }
@@ -32,7 +32,7 @@ body {
 }
 
 h1 {
-    font-size: 78px;
+    font-size: 55px;
     font-weight: normal;
     letter-spacing: -2px;
     margin-bottom: 12px;
@@ -44,18 +44,33 @@ h2 {
     letter-spacing: 6px;
     margin-bottom: 48px;
     line-height: 1.2;
+    font-weight: normal
 }
+
+
+
+p  {font-size: 24px;
+    margin-top: 48px;
+    margin-bottom: 20px;
+    line-height: 1.2;
+    text-transform: Normal;
+
+}
+
+
 
 h3 {
     font-size: 24px;
     margin-top: 48px;
     margin-bottom: 20px;
     line-height: 1.2;
-    text-transform: uppercase;
+    text-transform: Normal;
+
 }
 
 p {
     font-size: 20px;
     margin-bottom: 16px;
+    font-weight: normal
 }
 a { color: #59456e; }
