--- a/exercises/assets/css/style-2.css
+++ b/exercises/assets/css/style-2.css
@@ -11,6 +11,10 @@ input, button, textarea, select { font: inherit }
 
 /* ================= ENDS ================ */
 
+/* ====== PADDING AROUND WEB PAGE BODY CONTENT ======  */
+body { padding: 4% 20% }
+
+
 body { background-color: #39B5E0; }
 
 /* Desktops */
